@@ -17,7 +17,7 @@
 #define V_ZC_GAMMA 0
 #define V_ZC_RELEASE 0
 
-#define ZC_IS_NIGHTLY 1
+#define ZC_IS_NIGHTLY 0
 
 #define STRGZ_2(s) #s
 #define STRGZ(s) STRGZ_2(s)
